[gd_scene load_steps=27 format=2]

[ext_resource path="res://assets/Walk/__Boxing04_Walk_007.png" type="Texture" id=1]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_009.png" type="Texture" id=2]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_008.png" type="Texture" id=3]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_005.png" type="Texture" id=4]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_002.png" type="Texture" id=5]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_004.png" type="Texture" id=6]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_003.png" type="Texture" id=7]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_001.png" type="Texture" id=8]
[ext_resource path="res://player.gd" type="Script" id=9]
[ext_resource path="res://assets/Walk/__Boxing04_Walk_000.png" type="Texture" id=10]
[ext_resource path="res://assets/PunchRight/__Boxing04_PunchRight_005.png" type="Texture" id=11]
[ext_resource path="res://assets/soundtrack/punch/punch_boxing.wav" type="AudioStream" id=12]
[ext_resource path="res://assets/PunchRight/__Boxing04_PunchRight_003.png" type="Texture" id=14]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_003.png" type="Texture" id=17]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_004.png" type="Texture" id=18]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_001.png" type="Texture" id=19]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_002.png" type="Texture" id=20]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_006.png" type="Texture" id=21]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_007.png" type="Texture" id=22]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_008.png" type="Texture" id=23]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_009.png" type="Texture" id=24]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_005.png" type="Texture" id=25]
[ext_resource path="res://assets/Idle/__Boxing04_Idle_000.png" type="Texture" id=26]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "stopped_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 10 ), ExtResource( 8 ), ExtResource( 5 ), ExtResource( 7 ), ExtResource( 6 ), ExtResource( 4 ), ExtResource( 1 ), ExtResource( 3 ), ExtResource( 2 ) ],
"loop": true,
"name": "walk_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 14 ), ExtResource( 11 ) ],
"loop": true,
"name": "punch_right",
"speed": 10.0
}, {
"frames": [ ExtResource( 26 ), ExtResource( 19 ), ExtResource( 20 ), ExtResource( 17 ), ExtResource( 18 ), ExtResource( 25 ), ExtResource( 21 ), ExtResource( 22 ), ExtResource( 23 ), ExtResource( 24 ) ],
"loop": true,
"name": "idle_right",
"speed": 10.0
} ]

[sub_resource type="CapsuleShape2D" id=2]
radius = 80.3981
height = 123.18

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 109.824, 36.7428 )

[node name="Player" type="KinematicBody2D"]
position = Vector2( 0, 100 )
scale = Vector2( 0.2, 0.2 )
script = ExtResource( 9 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
position = Vector2( -29.3666, -8.00903 )
frames = SubResource( 1 )
animation = "idle_right"
frame = 9

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 48.1086, 30.2906 )
shape = SubResource( 2 )

[node name="PunchArea" type="Area2D" parent="."]
position = Vector2( 58.7329, 53.3936 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="PunchArea"]
position = Vector2( 36.727, 24.6763 )
shape = SubResource( 3 )

[node name="AudioPunch" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 12 )
[connection signal="body_entered" from="PunchArea" to="." method="_on_PunchArea_body_entered"]
